fix proposal page title, allowed propoosed by pubkey to wrap

--- a/src/routes/governance/governance.scss
+++ b/src/routes/governance/governance.scss
@@ -11,6 +11,7 @@
 
   th,
   td {
+    vertical-align: top;
     padding: 3px;
     color: $text-color-emphasise;
   }
